Fix card alignment

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -8,15 +8,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
-
-.container > * {
-  margin-top: 140px;
-}
-
-@media (min-width: 600px) {
-  .container > * {
-    margin-top: 180px;
-  }
-}
-
